[workspace]
resolver = "2"

members = [
    "crates/delta",
    "crates/bonfire",
    "crates/core/*",
    "crates/services/*",
    "crates/daemons/*",
]

[patch.crates-io]
redis23 = { package = "redis", version = "0.23.3", git = "https://github.com/revoltchat/redis-rs", rev = "523b2937367e17bd0073722bf6e23d06042cb4e4" }
#authifier = { package = "authifier", version = "1.0.10", path = "../authifier/crates/authifier" }
#rocket_authifier = { package = "rocket_authifier", version = "1.0.10", path = "../authifier/crates/rocket_authifier" }

# I'm 99% sure this is overloading the GitHub worker
# hence builds have been failing since, let's just
# disable it for now. In the future, we could use this
# if we were rolling our own CI (that is now).
[profile.release]
# Disable link-time optimization to save memory and speed up build
lto = false

# Lower optimization level to reduce build memory and time (default is 3)
opt-level = 2

# Enable incremental compilation (saves some rebuild time but not always useful in release)
incremental = false

# Strip symbols to reduce binary size but this uses some memory - optional
strip = "debuginfo"

